--- a/css/contacts_footer.css
+++ b/css/contacts_footer.css
@@ -1,45 +1,53 @@
     /* contacts */
     
-    .contacts__info {
+    .social1024 {
+        display: none;
+    }
+    
+    .contacts-info {
         display: flex;
     }
     
-    .contacts__form {
-        padding-top: 128px;
-        padding-left: calc((100vw - 1600px)/2 - 0px);
+    .inside-form-container {
+        padding-left: 50px;
+    }
+    
+    .contacts-form {
+        padding-top: 124px;
+        padding-left: calc((100vw - 1600px)/2 - 50px);
         padding-right: 120px;
-        padding-bottom: 120px;
+        padding-bottom: 100px;
         border: 1px solid #CACACA;
     }
     
-    .form__nameshop {
+    .form-nameshop {
         margin-bottom: 10px;
         font-family: 'OpenSans';
         font-weight: 600;
         font-size: 24px;
     }
     
-    .form__nameaddress {
+    .form-nameaddress {
         margin-bottom: 39px;
         font-family: 'OpenSans';
         font-size: 16px;
     }
     
-    .form__client__info {
+    .form-client-info {
         display: flex;
         flex-direction: column;
         margin-bottom: 40px;
         position: relative;
     }
     
-    .client__info__order {
+    .client-info-order {
         margin-bottom: 18px;
         font-family: 'OpenSans';
         font-weight: 400;
         font-size: 24px;
     }
     
-    .client__info-field {
+    .client-info-field {
         padding: 10px 40px 10px 24px;
         min-width: 400px;
         border-radius: 100px;
@@ -48,65 +56,68 @@
         cursor: pointer;
     }
     
-    .client__name {
+    .client-name {
         margin-bottom: 20px;
     }
     
-    .client__phone {
+    .client-phone {
         margin-bottom: 22px;
     }
     
-    .myname+.js-validate-error-label {
+    .js-validate-error-label {
         position: absolute;
+        left: 25px;
         white-space: nowrap;
-        color: #FF5C00;
-        bottom: 185px;
+        font-family: 'OpenSans';
+        font-weight: 400;
+        font-size: 12px;
+    }
+    
+    .myname+.js-validate-error-label {
+        bottom: 187px;
     }
     
     .mytel+.js-validate-error-label {
-        position: absolute;
-        white-space: nowrap;
-        color: #FF5C00;
-        bottom: 124px;
+        bottom: 126px;
     }
     
-    .add__client {
+    .add-client {
         position: relative;
-        border: 2px solid var(--color-purple);
-        border-radius: 100px;
-        background-color: transparent;
         max-width: 157px;
         padding: 19px 35px;
+        border: 2px solid var(--color-purple);
+        border-radius: 100px;
         font-family: 'OpenSans';
         font-weight: 700;
         font-size: 18px;
         color: var(--color-purple);
+        background-color: transparent;
     }
     
-    .add__client::before {
+    .add-client::before {
         content: '';
         display: block;
         position: absolute;
         top: -5px;
         left: -6px;
-        border-radius: 100px;
-        border: 3px solid transparent;
         height: calc(100% + 10px);
         width: calc(100% + 12px);
+        border-radius: 100px;
+        border: 3px solid transparent;
     }
     
-    .contacts__messanger {
-        margin-bottom: 17px;
+    .contacts-messanger {
+        margin-bottom: 15px;
         font-family: 'OpenSans';
         font-weight: 400;
         font-size: 24px;
     }
     
-    .messanger__link {
+    .messanger-link {
         display: flex;
     }
     
-    .link__whatsup {
+    .messanger:first-child {
         margin-right: 17px;
     }
     
@@ -127,10 +138,6 @@
         min-height: 700px;
     }
     
-    .ymaps-2-1-79-map {
-        min-height: 700px;
-    }
-    
     .ymaps-2-1-79-zoom {
         top: 270px;
     }
@@ -144,6 +151,10 @@
     }
     /* footer */
     
+    .social-footer1024 {
+        display: none;
+    }
+    
     .section-footer {
         background-color: var(--color-dark);
         color: var(--color-white);
@@ -156,12 +167,13 @@
         padding-bottom: 45px;
     }
     
-    .footer__social {
-        margin-top: 3px;
+    .footer-social {
+        margin-top: 0px;
+        display: flex;
     }
     
     .messanger-footer:not(:last-child) {
-        margin-right: 16px;
+        margin-right: 20px;
     }
     
     .social-footer {
@@ -169,14 +181,27 @@
         height: 45px;
         fill: #CACACA;
     }
+    
+    .footer-social {
+        margin-bottom: 0px;
+    }
     /* hover focus active */
+    
+    .social,
+    .social-footer,
+    .client-info-field,
+    .add-client {
+        transition: filter, opacity, fill, border, background-color, color;
+        transition-duration: .5s;
+        transition-timing-function: ease;
+    }
     
     .social:hover {
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         opacity: 0.5;
     }
     
-    .social:focus {
+    .link-social:focus .social {
         filter: none;
         opacity: 0.5;
     }
@@ -187,8 +212,11 @@
         border: .5px solid var(--color-hover);
     }
     
-    .social-footer:hover,
-    .social-footer:focus {
+    .social-footer:hover {
+        fill: var(--color-white);
+    }
+    
+    .footer-application-link:focus .social-footer {
         fill: var(--color-white);
     }
     
@@ -196,33 +224,95 @@
         fill: var(--color-active);
     }
     
-    .add__client:hover {
+    .add-client:hover {
         border: 2px solid var(--color-active);
         background-color: var(--color-hover);
         color: var(--color-white);
     }
     
-    .add__client:focus::before {
+    .add-client:focus::before {
         border: 2px solid var(--color-active);
     }
     
-    .add__client:focus {
+    .add-client:focus {
         border: 2px solid #D1A9F0;
         background-color: var(--color-white);
         color: var(--color-hover);
     }
     
-    .add__client:active::before {
+    .add-client:active::before {
         border: 2px solid var(--color-active);
     }
     
-    .add__client:active {
+    .add-client:active {
         border: 2px solid #D1A9F0;
         background-color: var(--color-hover);
         color: var(--color-white);
     }
     
-    .client__info-field:hover,
-    .client__info-field:focus {
+    .client-info-field:hover,
+    .client-info-field:focus {
         background-color: #EAEAEA;
+    }
+    
+    @media (max-width:1300px) {
+        .form-nameshop {
+            margin-bottom: 12px;
+        }
+        .social1024 {
+            display: block;
+        }
+        .social1920 {
+            display: none;
+        }
+        .contacts-form {
+            padding-left: calc((100vw - 926px)/2 - 50px);
+            padding-right: 100px;
+            padding-bottom: 88px;
+        }
+        .contacts-title {
+            margin-bottom: 21px;
+        }
+        .client-info-field {
+            margin-bottom: 22px;
+            padding: 10px 24px;
+            min-width: 335px;
+        }
+        .add-client {
+            padding: 18px 35px;
+        }
+        .messanger:first-child {
+            margin-right: 30px;
+        }
+        .section-footer__container {
+            padding-top: 47px;
+        }
+        .social-footer1024 {
+            display: block;
+        }
+        .social-footer1920 {
+            display: none;
+        }
+        .messanger-footer:not(:last-child) {
+            margin-right: 30px;
+        }
+        .footer-social {
+            margin-bottom: 0px;
+            margin-top: -10px;
+        }
+    }
+    
+    @media (max-width:885px) {
+        .contacts-form {
+            padding-right: 43px;
+        }
+    }
+    
+    @media (max-width:760px) {
+        .client-info-field {
+            min-width: 260px;
+        }
+        .map {
+            min-height: 757px;
+        }
     }
